--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,15 +145,15 @@ jobs:
           paths:
             - "/nerves/deploy/test"
 
-  deploy_test:
-    <<: *defaults
-    steps:
-      - <<: *install_aws_cli
-      - restore_cache:
-          key: nerves/deploy/test-{{ .Revision }}-{{ .Environment.CIRCLE_TAG }}
-      - deploy:
-          name: Publish notification on SNS
-          command: aws sns publish --topic-arn $AWS_SNS_TOPIC_ARN --message "$(cat /nerves/deploy/test/artifacts/${CIRCLE_SHA1}.json)"
+#  deploy_test:
+#    <<: *defaults
+#    steps:
+#      - <<: *install_aws_cli
+#      - restore_cache:
+#          key: nerves/deploy/test-{{ .Revision }}-{{ .Environment.CIRCLE_TAG }}
+#      - deploy:
+#          name: Publish notification on SNS
+#          command: aws sns publish --topic-arn $AWS_SNS_TOPIC_ARN --message "$(cat /nerves/deploy/test/artifacts/${CIRCLE_SHA1}.json)"
 
   deploy_system:
     <<: *defaults
